feat: tidy up code